# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\ListCategoriesController;
+use App\Http\Controllers\ListCategoryProductsController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/', function () {
@@ -8,3 +9,4 @@ Route::get('/', function () {
 });
 
 Route::get('/categories', ListCategoriesController::class);
+Route::get('/categories/{category}/products', ListCategoryProductsController::class);
